--- a/templates/customer.html
+++ b/templates/customer.html
@@ -10,8 +10,8 @@
 <body>
     <div class="cust-search-div">
         <div style="width:60%">
-            <label for="find-customer" class="cust-search-label">Buscar Cliente:</label>
-            <input type="text" id="find-customer" name="customer" class="cust-search-bar" placeholder="Nome ou Cpf">
+{#            <label for="find-customer" class="cust-search-label">Buscar Cliente:</label>#}
+            <input type="text" id="find-customer" name="customer" class="cust-search-bar" placeholder="Pesquisar Nome ou CPF">
         </div>
         <button class="cust-find-button"><i class="fa fa-search"></i></button>
         <button class="cust-add-button"><i class="fa fa-plus"></i></button>
@@ -56,10 +56,22 @@
                 >
             </div>
         </div>
-        <div class="cust-label">
-            <label for="address" class="label-form-cust">Endereço:</label>
-            <input type="text" name="address" id="address" class="cust-form-input-big" placeholder="Avenida Rio Branco, 1">
+        <div class="cust-two-field-form">
+            <div class="cust-label">
+                <label for="street" class="label-form-cust">Rua:</label>
+                <input type="text" name="street" id="street" class="cust-form-input-tiny" placeholder="Avenida Rio Branco">
+            </div>
+            <div class="cust-label">
+                <label for="number" class="label-form-cust">Número:</label>
+                <input type="text" name="number" id="number" class="cust-form-input-tiny" placeholder="100">
+            </div>
         </div>
+
+        <div class="cust-label">
+            <label for="complement" class="label-form-cust">Complemento:</label>
+            <input type="text" name="complement" id="complement" class="cust-form-input-big" placeholder="Apt. 101">
+        </div>
+
         <div class="cust-two-field-form">
             <div class="cust-label">
                 <label for="city" class="label-form-cust">Cidade:</label>
